--- a/1103.css
+++ b/1103.css
@@ -1,53 +1,69 @@
-.panel{
-    display: inline-block;
+body
+{
+    background-color: black;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    margin: 0;
+}
+#slide
+{
+    position: absolute;
+    display: flex;
+    top: 0px;
+    left: 0px;
     width: 1875px;
     height: 667px;
+    transition: left 300ms ease-out;
+    background-color: black;
+}
+.panel
+{
+    display: inline-block;
+    width: 375px;
+    height: 100%;
+    text-align: center;
+    background-color: white;
+    color: black;
+    line-height: 667px;
+    font-size: 100px;
+}
+#moveToLeft
+{
+    position: fixed;
+    cursor: pointer;
+    width: 50px;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    opacity: 0.5;
+    /*background-color: rgba(0,0,0,0.5);*/
+}
+#moveToRight
+{
+    position: fixed;
+    cursor: pointer;
+    width: 50px;
+    height: 100%;
+    right: 0px;
+    top: 0px;
+    opacity: 0.5;
+    /*background-color: rgba(0,0,0,0.5);*/
+}
+#btnGroup
+{
+    position: fixed;
+    bottom: 10px;
+    width: 100%;
     text-align: center;
 }
-
-.buttenLeft{
-
-}
-.buttenRight{
-
-}
-
-.one{
-    width: 375px;
-    height: 667px;
+.btn
+{
     display: inline-block;
-    background: #ffffff;
-    color: #000000;
-}
-
-.two{
-    width: 375px;
-    height: 667px;
-    display: inline-block;
-    background: #ffffff;
-    color: #000000;
-}
-
-.three{
-    width: 375px;
-    height: 667px;
-    display: inline-block;
-    background: #ffffff;
-    color: #000000;
-}
-
-.hour{
-    width: 375px;
-    height: 667px;
-    display: inline-block;
-    background: #ffffff;
-    color: #000000;
-}
-
-.five{
-    width: 375px;
-    height: 667px;
-    display: inline-block;
-    background: #ffffff;
-    color: #000000;
+    width: 50px;
+    height: 30px;
+    border: 1px solid black;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
 }
